tests/fixtures/invalid/float_bitxor_dict.py
# Cannot bitwise XOR Float and Dict[str, int]
x: float = 1.0 ^ {"a": 1}
